<resources>
    <string name="channelId">8R7S6</string>
    <string name="app_name">豆豆数学</string>
    <string name="alert_title">@string/app_name</string>
    <string name="alert_neutral">取消</string>
    <string name="alert_positive">确定</string>
    <string name="enter">确认</string>
    <string name="goback">返回</string>
    <string name="finished">完成</string>
    <string name="gofinish">去完成</string>
    <string name="hasfinished">已完成</string>
    <string name="param_error">参数错误</string>
    <string name="server_error">数据获取失败，请稍后重试</string>
    <string name="no_connection">当前网络不可用，请检查你的网络设置</string>
    <string name="submit_server_exception">数据获取失败，请稍后重试</string>
    <string name="submit_request_exception">你的网络堵塞了，请尝试使用更好的网络，或切换至3G/4G网络上传！</string>
    <string name="upload_failure_tips">上传失败\n网络状态不好，请稍后重试</string>
    <string name="upload_failure_tips2">上传失败\n服务器繁忙，请稍后重试</string>
    <string name="upload_server_norun">服务器维护中，暂时无法上传\n如需更多信息，请联系客服</string>
    <string name="network_status">网络状态</string>
    <string name="network_speed">上传速度</string>
    <string name="fault_nonet">当前网络不可用，请检查你的网络设置</string>
    <string name="fault_timeout">连接超时，请重新加载试试</string>
    <string name="fault_server">暂时无法打开页面，请稍后重试</string>
    <string name="retry_load">重新加载</string>
    <string name="loading_wait">加载中，请耐心等待哦！</string>
    <string name="page_all_right">本页全对</string>
    <string name="register_ddmath">注册豆豆数学</string>
    <string name="login_ddmath">登录豆豆数学</string>
    <string name="register_count">已有%d人次使用豆豆数学</string>
    <string name="register_give_bean">新用户注册赠送%1$d学豆，填写推荐人手机号码多赠送%2$d学豆</string>
    <string name="verify_intro">为了您的账号安全和给您提供更好的服务，请输入你的手机号并验证</string>
    <string name="verify_intro_bottom">＊如果长时间未收到验证码信息，请尝试联系豆豆客服：400-9928-918</string>
    <string name="jump">跳过</string>
    <string name="experience_immediately">立即体验</string>
    <string name="create_time">生成时间:</string>
    <string name="date_type">类型:</string>
    <string name="invite_friend">长按二维码图片，然后直接发送给你的小伙伴，识别二维码便可注册</string>
    <string name="regisiter_tips">请联系你的任课老师获取学生注册的二维码，进行扫码注册，以免影响正常使用。确无注册二维码的新用户，可使用他人分享的注册二维码进行注册或联系豆豆老师400-9928-918。</string>
    <string name="resend_verifycode">%d秒后重新获取</string>
    <string name="send_verifycode">获取验证码</string>
    <string name="module_usercenter">我的</string>
    <string name="module_myworld">首页</string>
    <string name="module_studytask">学习</string>
    <string name="module_capturebook">提升</string>
    <string name="module_diagnosticreport">报告</string>
    <string name="submit_teacher_work">提交老师布置的作业</string>
    <string name="person_sorce_plan">个人专属提分方案</string>
    <string name="whole_page_collecterr">整页收集错题</string>
    <string name="scanwx_jion_gzh">扫码关注“豆豆数学”家长微信服务号</string>
    <string name="scanwx_tips">随时掌握一线升学资讯，孩子成长有您陪伴！</string>
    <string name="one_look">一键诊断</string>
    <string name="look_work_detail">查看作业/考试</string>
    <string name="everyday_error_correct">每日错题订正</string>
    <string name="everyweek_error_practice">每周错题再练本</string>
    <string name="everyweek_train_excellent">每周变式训练本</string>
    <string name="error_revise_count">今日还有%d道错题待订正，快去完成任务吧</string>
    <string name="week_practice_count">你有%d份新的周错题再练本，快去下载看看吧</string>
    <string name="week_train_excellent_count">你有%d份新的周变式训练本，快去下载看看吧</string>
    <string name="knowledge_diagnosis">知识诊断</string>
    <string name="create_promote_tips">点击按钮，快速创建全部等级知识点的提升练习</string>
    <string name="create_promote_practice">创建提升练习</string>
    <string name="class_rank">排行榜</string>
    <string name="gradle_rank">年级榜</string>
    <string name="distribute_diagram">分布图</string>
    <string name="look_graph">知识图谱</string>
    <string name="sure_and_produce">确定并生成</string>
    <string name="produce_tip">平台每周根据个人薄弱知识点自动生成的错题再练本和变式训练本进行练习，养成周练月结的好习惯。</string>
    <string name="create_error_book">创建错题本下载（约%d题）</string>
    <string name="no_knowledges_tips">该时间段内没有学习数据</string>
    <string name="no_display_knowledges">没有可显示的知识点～</string>
    <string name="no_video">暂时还没有视频哦～</string>
    <string name="no_exchanged_video">暂时还没有可使用的的视频哦～</string>
    <string name="no_product">暂时还没有宝贝哦～</string>
    <string name="no_product_set">暂时还没有套餐～\n可咨询任课老师或联系豆豆老师：400-9928-918</string>
    <string name="no_knowledge_video">豆豆暂时未找到视频，你可以到学习任务-名师精讲中自己找找看！</string>
    <string name="buy_success">购买成功!</string>
    <string name="ddwork_camera_tips"> 将题单上4个定位符放入对应的框内\n拍照较慢时，请点击屏幕手动对焦</string>
    <string name="ddwork_preview_tips">调整方框高度，确保选出每道题的作答区域。</string>
    <string name="lm_preview_tips">若每题方框偏差较大,可点击方框调整</string>
    <string name="ddwork_commit_tips">请确认题干和拍照的答案相匹配</string>
    <string name="ddwork_commitfail_tips">提交失败\n网络状态不好，请稍后重试</string>
    <string name="ddwork_commitslow_tips">网络上传速度太低了，\n请切换网络，保持网络通畅！</string>
    <string name="ddwork_revokework">老师已撤回本次作业，\n如有疑问请与老师联系～</string>
    <string name="ddwork_revokework1">老师已撤回本次作业，如有疑问请与老师联系～</string>
    <string name="ddwork_upload_title">拍照/扫描教辅作业，即得诊断结果</string>
    <string name="ddwork_direct_upload">老师已在豆豆平台上布置作业了，快去上传作业吧！</string>
    <string name="ddwork_give_and_upload">快来上传需要自我诊断的作业吧！</string>
    <string name="teacher_scan_upload">老师扫描上传，无需拍照</string>
    <string name="corrected_upload">请拍照上传老师的批阅结果</string>
    <string name="page_count_taked">已拍%1$d页，共%2$d页 </string>
    <string name="work_submite_count">已有%d人提交</string>
    <string name="upload_correct">请拍照上传老师的批阅结果</string>
    <string name="create_work_intro">1. 先选择你想要上传作业的教辅和题目所在页；\n2. 手机平行对着完成的教辅作业拍照，选择需要上传的题目；\n3. 完成创建。</string>
    <string name="select_book_intro">如果没有搜索到您想使用的教辅，可以联系豆豆客服寻求帮助\n电话：400-9928-918</string>
    <string name="msg_last7day">只保留最近7天的消息</string>
    <string name="jxcommand">精选推荐</string>
    <string name="eval_waitupload_title">待上传的考试或作业</string>
    <string name="eval_uploaded_title">我的知识分析</string>
    <string name="camera_tips">请竖屏拍照，文字尽量与参考线平行</string>
    <string name="camera_tips4">文字尽量与参考线平行</string>
    <string name="camera_tips2">可拍照整页题目</string>
    <string name="camera_tips3">请拍照题目和答案</string>
    <string name="camera_dealtips">\n\n\n\n\n\n\n\n正在拍照,请保持手机稳定...</string>
    <string name="lmcamera_dealtips">请将书页靠近四个红角内\n然后点击拍照按钮进行拍照</string>
    <string name="lmcamera_dealtips1">请点击右侧按钮进行拍照</string>
    <string name="lmcamera_handtips">正在拍照,请保持手机平稳</string>
    <string name="crop_tips">调整方框，选择给老师批阅的所有题目</string>
    <string name="many_image">不能继续拍照\n未上传图片不能超过12张哦~</string>
    <string name="edit_tips">长按图片拖动可调整顺序</string>
    <string name="delete_allimage">确定要删除该组全部照片吗？</string>
    <string name="delete_image">确定删除该图吗？</string>
    <string name="enter_count">请输入上传图片中的题目数量</string>
    <string name="filter_vcode">0123456789</string>
    <string name="upload_success">上传成功</string>
    <string name="look_tips">你可以在今日图册里查看呦～</string>
    <string name="editing_noquit">有正在编辑的图片，完成后才能返回</string>
    <string name="uploadedit_noquit">你还未更新修改的内容，确定要退出吗？</string>
    <string name="uploading_quittips">有正在上传的图片，完成后才能返回</string>
    <string name="cancel">取消</string>
    <string name="edit_person_info">编辑个人信息</string>
    <string name="modify_pw">修改密码</string>
    <string name="more_user_info">查看更多个人资料></string>
    <string name="classcode_tips">若有班级码请输入班级码自动加班，没有则点击“没有班级码”。</string>
    <string name="xbook_crop_tips">调整方框和分隔线，分隔题干和答案</string>
    <string name="xbook_crop_tips1">调整方框，裁剪所需区域</string>
    <string name="xbook_qtype_correct">订正</string>
    <string name="ddwork_correcterror">我要申诉</string>
    <string name="ddwork_correcterror_tips">批错了?可申诉</string>
    <string name="ddwork_correctapply">已申诉</string>
    <string name="ddwork_corrected">已重新批阅</string>
    <string name="ddwork_standardanswer">参考答案</string>
    <string name="ddwork_correct_title">我对批阅有疑问</string>
    <string name="diagios_history">我的练习</string>
    <string name="search_video_tips">默认本年级视频，按章节搜索更多</string>
    <string name="show_exchanged_videos">只显示我可使用的视频</string>
    <string name="video_play_times">次数：已播放%d次</string>
    <string name="query_times_failure">查询使用次数失败，请重试</string>
    <string name="look_more_class">更多班级请查看详细资料>></string>
    <string name="user_priviledge">学习特权</string>
    <string name="forcetrain_answer_error"> (`Д´*) 嗷~~好像答错了。\n再来一次吧！相信自己，你没问题的！</string>
    <string name="forcetrain_answer_errpart">┗|｀O′|┛ 嗷~~好像答错了。不要灰心，有x%的同学也答错了。</string>
    <string name="forcetrain_answer_errall">┗|｀O′|┛ ┗|｀O′|┛ 嗷~~好像答错了。继续努力哦。</string>
    <string name="forcetrain_quit">放弃本次强化训练吗？到手的奖励就溜走了哦～</string>
    <string name="errreview_quit">放弃本次错题回顾吗？到手的奖励就溜走了哦～</string>
    <string name="wait_submit">正在提交,请稍候...</string>
    <string name="nodata_question_review">今天的错题回顾已经用完啦!</string>
    <string name="nodata_question_review_know">小豆没有找到错题!</string>
    <string name="nodata_froce_train">今天的强化练习已经用完啦!</string>
    <string name="cheat_allfinish_tips_2">已有%d个童鞋完成了今天的任务，\n加油赶上他们吧～</string>
    <string name="cheat_onefinish_tips_2">已有%d个童鞋完成了今天的任务，\n加油赶上他吧～</string>
    <string name="cheat_nofinish_tips">还没有人完成今天的任务，赶快来\n抢占第一名的位置吧！</string>
    <string name="cheat_no_task">今天没有任务，可以好好休息一下哦～</string>
    <string name="cheat_finish_success">太棒了，今天的任务完成啦！</string>
    <string name="cheat_submit_success">作业提交成功！</string>
    <string name="cheat_submit_tips1">越努力越幸运，你是最棒的～</string>
    <string name="cheat_submit_tips2">你是全班第%d个提交作业的，棒棒哒～</string>
    <string name="select_answer">请选择答案:</string>
    <string name="select_errreasons">选择错误原因:</string>
    <string name="revise_camera_tip">请拍照上传订正答案，注意答案必须在一页内</string>
    <string name="revise_camera_redo">重拍</string>
    <string name="revise_camera_do">点击竖屏拍照</string>
    <string name="revise_total">已有%s人次在使用</string>
    <string name="goto_childquestion">精确到题目小问</string>
    <string name="search_pratice_keyword">输入套题名称关键字</string>
    <string name="cheat_tips">提分秘籍仅限选择题，如需做解答题，请前往错题精练本、变式训练本、精品套题页面。</string>
    <string name="replace_pay_tips">提示:请在两个小时内完成支付，如果未支付，抵扣的学豆两个小时后将自动返回到你的账户。</string>
    <string name="feedback_hint">来吧，勇敢地告诉程序猿哥哥你所有的建议与需求！！</string>
    <string name="feedback_attention_wechat"> 微信扫码或手动搜索“豆豆数学”，关注公众号</string>
    <string name="feedback_to_wechat">有意见或建议请反馈给公众号，让豆豆老师处理吧！</string>
    <string name="usercenter_email">service-fw@tsinghuabigdata.com</string>
    <string name="cannot_dial">无法拨出电话，请使用其他设备联系客服</string>
    <string name="usercenter_pw_second">再次输入新的密码</string>
    <string name="usercenter_pw_input">密码 6-16位字符</string>
    <string name="usercenter_pw_getcode">获取验证码</string>
    <string name="usercenter_pw_incode">输入验证码</string>
    <string name="usercenter_input_phone">手机号</string>
    <string name="usercenter_input_nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="user_name">姓名</string>
    <string name="enter_year">入学年份</string>
    <string name="exam_num">考号</string>
    <string name="usercenter_input_recommend_num">推荐人手机号码(选填)</string>
    <string name="usercenter_register_success">注册成功！填写更多信息获取定制服务</string>
    <string name="usercenter_input_real_name">输入真实姓名，方便老师和小伙伴们找到你</string>
    <string name="usercenter_confirm_info_right">请确认以上信息填写无误，注册成功后将不能修改。</string>
    <string name="usercenter_not_find_school">如果没有找到你的班级，可以联系豆豆客服寻求帮助，电话：400-9928-918</string>
    <string name="usercenter_sel_join_class">选择你要加入的班级</string>
    <string name="password_filter">0123456789qazwsxedcrfvtgbyhnujmikolpQAZWSXEDCRFVTGBYHNUJMIKOLP~!@#$%^&amp;*()_+`-=[]{}:"|;'\,./&lt;&gt;?</string>
    <string name="card_exchange_record">VIP卡兑换记录</string>
    <string name="card_exchange_input_tips">请正确输入兑换码（字母不区分大小写），当天输入错误超过6次将不能继续兑换。</string>
    <string name="card_exchange_intro">VIP卡兑换说明</string>
    <string name="redeem_code_filter">0123456789qazwsxedcrfvtgbyhnujmikolpQAZWSXEDCRFVTGBYHNUJMIKOLP</string>
    <string name="card_code_filter">0123456789qazwsxedcrfvtgbyhnujmikolpQAZWSXEDCRFVTGBYHNUJMIKOLP</string>
    <string name="enter_exchange">确认兑换</string>
    <string name="input_card_code">请输入您的VIP卡兑换码</string>
    <string name="camera">拍照</string>
    <string name="pics_from">相册选择</string>
</resources>