<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <Button
        android:id="@+id/btn_exchange_record"
        android:layout_width="106dp"
        android:layout_height="33dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/bg_buy_detail"
        android:text="@string/card_exchange_record"
        android:textColor="@color/color_59CBD7"
        android:textSize="13sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_exchange_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_FF6C6C"
            android:textSize="12sp"/>

        <EditText
            android:id="@+id/edt_card_code"
            android:layout_width="250dp"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:background="@drawable/bg_rect_input_vip_code"
            android:digits="@string/card_code_filter"
            android:hint="@string/input_card_code"
            android:imeOptions="flagNoExtractUi"
            android:maxLength="8"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:textColorHint="@color/color_cccccc"
            android:textColor="@color/color_333333"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/card_exchange_input_tips"
            android:textColor="@color/color_999999"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/btn_exchange"
            android:layout_width="116dp"
            android:layout_height="38dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/selector_confirm_exchange"
            android:gravity="center"
            android:text="@string/enter_exchange"
            android:textColor="@color/white"
            android:textSize="@dimen/text_middle"/>


    </LinearLayout>

    <TextView
        android:id="@+id/tv_exchange_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="12dp"
        android:text="@string/card_exchange_intro"
        android:textColor="@color/color_48B8FF"
        android:textSize="13sp"/>

    <View
        android:id="@+id/tv_hide_view"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true" />

</RelativeLayout>