<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/bg_zhuye"
    android:orientation="vertical" >

    <com.tsinghuabigdata.edu.ddmath.module.ddwork.view.WorkToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:background="@drawable/inputbox_login"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/login_icon_phonenumber"
            android:hint="@string/usercenter_input_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:textColorHint="@color/input_hint_text_color"
            android:textSize="@dimen/text_large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_verifycode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/inputbox_login"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/login_icon_vcode"
                android:hint="@string/usercenter_pw_incode"
                android:digits="@string/redeem_code_filter"
                android:maxLength="10"
                android:textColorHint="@color/input_hint_text_color"
                android:textSize="@dimen/text_large" />

            <Button
                android:id="@+id/bt_verifycode"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@drawable/sel_btn_verifycode_bg"
                android:text="@string/usercenter_pw_getcode"
                android:textColor="@color/white"
                android:textSize="@dimen/text_large" />

        </LinearLayout>

        <EditText
            android:id="@+id/et_passwd"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:background="@drawable/inputbox_login"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/login_icon_password"
            android:hint="新的密码"
            android:inputType="textPassword"
            android:digits="@string/password_filter"
            android:maxLength="16"
            android:maxLines="1"
            android:textColorHint="@color/input_hint_text_color"
            android:textSize="@dimen/text_large" />

        <EditText
            android:id="@+id/et_confirm_passwd"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:background="@drawable/inputbox_login"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/login_icon_re_password"
            android:hint="@string/usercenter_pw_second"
            android:inputType="textPassword"
            android:digits="@string/password_filter"
            android:maxLength="16"
            android:maxLines="1"
            android:textColorHint="@color/input_hint_text_color"
            android:textSize="@dimen/text_large" />

        <Button
            android:id="@+id/btn_finish"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/finished"
            android:textSize="@dimen/text_large_xx"
            android:textColor="@color/white"
            android:background="@drawable/bg_login_btn_blue_r30"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>