<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="547dp"
              android:layout_height="367dp"
              android:background="@drawable/ic_frame"
              android:orientation="vertical"
              android:paddingTop="60dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:singleLine="true"
        android:text="@string/verify_intro"
        android:textColor="@color/color_999999"
        android:textSize="15sp"/>

    <LinearLayout
        android:layout_width="460dp"
        android:layout_height="74dp"
        android:layout_gravity="center_horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/et_phone_num"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/inputbox_login"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_phone"
            android:focusable="true"
            android:hint="@string/usercenter_input_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/input_hint_text_color"
            android:textSize="@dimen/text_large"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="460dp"
        android:layout_height="74dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_verifycode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/inputbox_login"
            android:digits="@string/redeem_code_filter"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/img_yanzheng"
            android:hint="@string/usercenter_pw_incode"
            android:maxLength="10"
            android:textColor="@color/black"
            android:textColorHint="@color/input_hint_text_color"
            android:textSize="@dimen/text_large"/>

        <Button
            android:id="@+id/bt_verifycode"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@drawable/sel_btn_verifycode_bg"
            android:text="@string/usercenter_pw_getcode"
            android:textColor="@color/white"
            android:textSize="@dimen/text_large"/>
    </LinearLayout>

    <!--<ImageView
        android:id="@+id/iv_finish"
        android:layout_width="@dimen/button_large_width"
        android:layout_height="@dimen/button_large_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:src="@drawable/btn_complain"/>-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <!-- 切换账号 -->
        <ImageView
            android:id="@+id/iv_change_account"
            android:layout_width="@dimen/button_large_width"
            android:layout_height="@dimen/button_large_height"
            android:src="@drawable/btn_changeaccount"/>


        <!-- 完成 -->
        <ImageView
            android:id="@+id/iv_finish"
            android:layout_width="@dimen/button_large_width"
            android:layout_height="@dimen/button_large_height"
            android:layout_marginLeft="80dp"
            android:src="@drawable/btn_complain"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:text="@string/verify_intro_bottom"
        android:textColor="@color/color_999999"
        android:textSize="16sp"/>


</LinearLayout>