<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:id="@+id/btn_camera"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="@dimen/text_large"
            android:textColor="@color/color_333333"
            android:gravity="center"
            android:text="@string/camera"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_EAEAEA"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>

        <TextView
            android:id="@+id/btn_pics"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="@dimen/text_large"
            android:textColor="@color/color_333333"
            android:gravity="center"
            android:text="@string/pics_from"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_EAEAEA"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="@dimen/text_large"
            android:textColor="@color/color_06B96F"
            android:gravity="center"
            android:text="@string/cancel"/>

    </LinearLayout>

</LinearLayout>
